# ABot-Claw

./: README.md
Services/: README.md
Services/GraspAnything/: README.md  SERVICE_AGENT.md  grasp_service_nofilter.py  main.py  requirements.txt  service.yaml  test_api.py  yolo_service.py
Services/GraspAnything/grasp_detection/: demo.py  demo.sh
Services/SpatialMemory/: README.md  SERVICE_AGENT.md  main.py  test_smoke.py
Services/SpatialMemory/app/: config.py  embeddings.py  schemas.py  storage.py
Services/SpatialMemory/pipelines/: README.md  offline_keyframe_pipeline.py
Services/VLAC/: Dockerfile  LICENSE  README.md  SERVICE_AGENT.md  pyproject.toml
Services/VLAC/evo_vlac/: __init__.py
Services/VLAC/evo_vlac/examples/: vla_example.py
Services/VLAC/evo_vlac/utils/: data_processing_vlm.py  magic_detect.py  video_tool.py
Services/YOLO/: Dockerfile  SERVICE_AGENT.md  service.yaml
Skills/: MISSION.md  README.md  ROBOT.md  SERVICE.md  setup.sh
Skills/skills/abotclaw-active-services/: SKILL.md
Skills/skills/abotclaw-bundle/: SKILL.md
openclaw_layer/: HEARTBEAT.md  ROBOT.md
openclaw_layer/docs/: ABOTCLAW_SDK_DISCOVERY.md
robot_client/arm_piper/: logging_config.py
robot_layer/: README.md
robot_layer/arm_piper/: logging_config.py
robot_layer/arm_piper/agent_server/: auth.py  (+7 more)
service_layer/GraspAnything/: Dockerfile  service.yaml  test_api.py
service_layer/SpatialMemory/: requirements.txt
service_layer/VLAC/: .gitignore  main.py  requirements.txt  service.yaml  test_service_api.py
service_layer/YOLO/: main.py  requirements.txt  test_api.py
(+52 files in other folders)
